# fastapi-template

./: pyproject.toml
app/: __init__.py
fastapi_template/: __init__.py
